# AirStackHummingbird

./: .env  .gitmodules
.github/workflows/: colcon_build.yaml  colcon_setup.yaml  colcon_test.yaml  run_tests.yaml
common/ros_packages/airstack_msgs/: CMakeLists.txt
common/ros_packages/airstack_msgs/msg/: WireDetection.msg  WireDetections.msg  WireTarget.msg
docker/extras/: spirit_uav_fire_academy.usd  test_drone_world.usd
docs/development/: docker_usage.md
docs/simulation/isaac_sim/: index.md  scene_setup.md
gcs/ros_ws/src/gcs_bringup/rviz/: gcs.rviz
ground_control_station/docker/: .bashrc  Dockerfile.gcs  docker-compose.yaml  ground-control-station-base-docker-compose.yaml
ground_control_station/ros_ws/src/gcs_bringup/: CMakeLists.txt  README.md  gcs_bringup_node.cpp  package.xml
ground_control_station/ros_ws/src/gcs_bringup/config/: domain_bridge.yaml
ground_control_station/ros_ws/src/gcs_bringup/include/gcs_bringup/: gcs_bringup.h
ground_control_station/ros_ws/src/gcs_bringup/launch/: gcs.launch.xml
ground_control_station/ros_ws/src/gcs_bringup/param/: map.yaml
ground_control_station/ros_ws/src/gcs_bringup/rviz/: gcs.rviz
ground_control_station/ros_ws/src/gcs_bringup/src/: gcs_bringup_node.cpp
robot/docker/: .bashrc  Dockerfile.robot  docker-compose.yaml  robot-base-docker-compose.yaml
robot/docker/zed/ws/src/zed_wrapper/launch/: zed_dual_camera.launch.py
robot/ros_ws/src/autonomy/0_interface/interface_bringup/launch/: interface.launch.xml
robot/ros_ws/src/autonomy/0_interface/mavros_interface/: CMakeLists.txt
robot/ros_ws/src/autonomy/0_interface/mavros_interface/scripts/: print_rotation.py
robot/ros_ws/src/autonomy/0_interface/multi_agent_bridge/: .CMakeLists.txt.swp
robot/ros_ws/src/autonomy/0_interface/multi_agent_bridge/include/multi_agent_bridge/: .multi_agent_bridge.h.swp  multi_agent_bridge.h
robot/ros_ws/src/autonomy/0_interface/multi_agent_bridge/launch/: multi_agent_bridge.py
robot/ros_ws/src/autonomy/0_interface/robot_interface/: CMakeLists.txt
robot/ros_ws/src/autonomy/0_interface/robot_interface/src/: odometry_conversion.cpp
robot/ros_ws/src/autonomy/0_interface/transform_to_world_frame/: CMakeLists.txt  package.xml
robot/ros_ws/src/autonomy/0_interface/transform_to_world_frame/include/transform_to_world_frame/: transform_to_world_frame.hpp
robot/ros_ws/src/autonomy/0_interface/transform_to_world_frame/src/: transform_to_world_frame.cpp
robot/ros_ws/src/autonomy/1_sensors/camera_param_server/config/: camera_config.yaml
robot/ros_ws/src/autonomy/1_sensors/sensors_bringup/launch/: sensors.launch.xml
robot/ros_ws/src/autonomy/2_perception/perception_bringup/: CMakeLists.txt  package.xml
robot/ros_ws/src/autonomy/2_perception/perception_bringup/config/: odom_transformer_macvo_params.yaml
robot/ros_ws/src/autonomy/2_perception/perception_bringup/launch/: perception.launch.xml  perception_wire.launch.xml
robot/ros_ws/src/autonomy/3_local/b_planners/takeoff_landing_planner/config/: takeoff_landing_planner.yaml
robot/ros_ws/src/autonomy/3_local/c_controls/trajectory_controller/src/: trajectory_controller.cpp
robot/ros_ws/src/autonomy/3_local/local_bringup/: package.xml
robot/ros_ws/src/autonomy/3_local/local_bringup/launch/: local.launch.xml  local_wire.launch.xml
robot/ros_ws/src/autonomy/3_local/local_bringup/rviz/: droan.rviz
robot/ros_ws/src/autonomy/4_global/b_planners/random_walk/: CMakeLists.txt  package.xml
robot/ros_ws/src/autonomy/4_global/global_bringup/config/: vdb_params.yaml
robot/ros_ws/src/autonomy/4_global/global_bringup/launch/: global.launch.xml
robot/ros_ws/src/autonomy/5_behavior/behavior_bringup/launch/: behavior.launch.xml
robot/ros_ws/src/autonomy/autonomy_bringup/launch/: autonomy.launch.xml  autonomy_wire_perching.launch.xml
robot/ros_ws/src/robot_bringup/: README.md  package.xml
robot/ros_ws/src/robot_bringup/config/: domain_bridge.yaml
robot/ros_ws/src/robot_bringup/launch/: robot.launch.xml  robot_wire_perching.launch.xml  static_transforms.launch.xml
robot/ros_ws/src/robot_bringup/params/: domain_bridge.yaml
robot/ros_ws/src/robot_bringup/rviz/: robot.rviz
ros_ws/src/end2end_tests/: package.xml  setup.py
ros_ws/src/end2end_tests/launch/: isaac_test_env_bringup.xml
ros_ws/src/end2end_tests/tests/: test_end2end.py
ros_ws/src/robot/: package.xml
ros_ws/src/robot/autonomy/5_behavior_managers/central/launch/: ascent_drone.xml  ascent_drone_headless.xml  ascent_isaac_omni_drone.xml  ascent_isaac_one_drone.xml
ros_ws/src/robot/robot_bringup/launch/: launch_robot_headless.yaml
ros_ws/src/robot/robot_systems_tests/: package.xml  setup.py
ros_ws/src/robot/robot_systems_tests/tests/: robot_tester.py  test_robot.py
ros_ws/src/robot/tests/: robot_tester.py  setup.py
ros_ws/src/simulation/isaacsim/: CMakeLists.txt  package.xml
ros_ws/src/simulation/isaacsim/scripts/: run_isaacsim.py
ros_ws/src/tests/: end2end_tests.py
simulation/isaac-sim/docker/: Dockerfile.isaac-ros  docker-compose.yaml  user_TEMPLATE.config.json
simulation/isaac-sim/launch_scripts/: example_one_px4_pegasus_launch_script.py
(+6 files in other folders)
