<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ajong@andrew.cmu.edu">andrew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>trajectory_library</depend>
  <depend>takeoff_landing_planner</depend>
  <depend>wire_approach_planner</depend>
  <depend>droan_local_planner</depend>
  <depend>disparity_expansion</depend>
  <depend>trajectory_controller</depend>
  <depend>pid_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
